--- a/src/componentes/SobreNosotros/SobreNosotros.css
+++ b/src/componentes/SobreNosotros/SobreNosotros.css
@@ -4,8 +4,8 @@
 }
 .imagen{
     justify-content: center;
-    height: 200px;
-    width: 200px;
+    height: 150px;
+    width: 150px;
 }
 .sobreNos{
     position: 25%;
@@ -14,14 +14,30 @@
     align-items: center;
     background-image: url(../../../public/fondoSobreNosotros.jpg);
     background-repeat: no-repeat;
-    background-size: 100% 130%;
+    background-size: 200vh 100vh;
+}
+
+.btn {
+    cursor: pointer;
+    border: 2px solid white;
+    padding: 10px;
+    margin-top: 15px;
+    margin-bottom: 25px;
+    border-radius: 5px;
+    background-color: transparent;
+    color: white;
+}
+
+.btn, a{
+    text-decoration: none;
+    color: white;
 }
 
 .text{
     text-align: center;
     color: white;
-    padding: 0 22%;
-    font-size: 20px;
+    padding: 0 22% 40px;
+    font-size: 15px;
 }
 
 .titulo{
