--- a/src/componentes/Banner/estilos.css
+++ b/src/componentes/Banner/estilos.css
@@ -1,18 +1,18 @@
-*{
-    padding: 0;
-    margin: 0;
+* {
+   padding: 0;
+   margin: 0;
 }
 
-.description{
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    flex-direction: column;
+.description {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
 }
 
-.imagenCarrousel{
-    object-fit: cover;
-    width: 100%;
-    height: 50vh;
+.imagenCarrousel {
+   object-fit: cover;
+   width: 100%;
+   height: 50vh;
+   margin-top: 20px;
 }
-
